<resources>
    <!--BIM-->
    <string name="title_bmi">BIM</string>
    <string name="bmi_heigth">신장</string>
    <string name="bmi_weight">체중</string>

    <!--Lotto-->
    <string name="title_lotto">Lotto</string>
    <string name="lotto_add_number">번호 추가하기</string>
    <string name="lotto_clear_number">초기화</string>
    <string name="lotto_auto_producing">자동 생성 시작</string>

    <!--Diary-->
    <string name="title_diary">Secret Diary</string>

    <!--Calculator-->
    <string name="title_calculator">Calculator</string>
    <string name="calculator_clear">C</string>
    <string name="calculator_equal">=</string>
    <string name="calculator_plus">+</string>
    <string name="calculator_minus">-</string>
    <string name="calculator_multiply">*</string>
    <string name="calculator_divide">/</string>
    <string name="calculator_modulus">%</string>
    <string name="calculator_bracket">()</string>
    <string name="calculator_point">.</string>
    <string name="calculator_num_1">1</string>
    <string name="calculator_num_2">2</string>
    <string name="calculator_num_3">3</string>
    <string name="calculator_num_4">4</string>
    <string name="calculator_num_5">5</string>
    <string name="calculator_num_6">6</string>
    <string name="calculator_num_7">7</string>
    <string name="calculator_num_8">8</string>
    <string name="calculator_num_9">9</string>
    <string name="calculator_close_history">CLOSE</string>
    <string name="calculator_delete_history">DELETE</string>

    <!-- Picture Frame -->
    <string name="title_picture_frame">Electronic Picture Frame</string>
    <string name="picture_frame_add">사진 추가하기</string>
    <string name="picture_frame_run">전자액자 실행하기</string>

    <!-- Pomodoro -->
    <string name="title_pomodoro_timer">PPomodoro Timer</string>
    <string name="pomodoro_default_minutes">00`</string>
    <string name="pomodoro_default_second">00</string>

    <!-- Recorder -->
    <string name="title_recorder">Recorder</string>
    <string name="recorder_default_play_time">00:00</string>
    <string name="recorder_reset">RESET</string>

    <!-- Web -->
    <string name="title_web">Web</string>

    <string name="title_push">Push Notification</string>

    <string name="title_quote">Today`s Quote</string>

    <string name="title_alarm">Alarm</string>
    <string name="alarm_turn_on">알람 켜기</string>
    <string name="alarm_turn_off">알람 끄기</string>
    <string name="alarm_reset_time">시간 재설정</string>

    <string name="title_book">Book</string>
    <string name="book_save_review">저장하기</string>

    <string name="title_tinder">Tinder</string>
    <string name="tinder_match_list">매치 리스트 보기</string>
    <string name="tinder_no_card">매칭할 카드가 없습니다.</string>
    <string name="tinder_log_out">로그아웃 하기</string>
    <string name="tinder_sign_in">회원가입</string>
    <string name="tinder_log_in">로그인</string>
    <string name="tinder_log_in_with_facebook">Continue with Facebook</string>
    <string name="facebook_app_id">584373109636939</string>
    <string name="fb_login_protocol_scheme">fb584373109636939</string>
    <string name="tinder_write_name">이름을 입력해주세요</string>
    <string name="tinder_like">LIKE</string>
    <string name="tinder_dislike">DISLIKE</string>


    <string name="title_market">Second-Hand Market</string>
    <string name="market_home">홈</string>
    <string name="market_chatting">채팅</string>
    <string name="market_chat_send">전송</string>
    <string name="market_my_page">내 정보</string>
    <string name="market_title">중고 거래</string>
    <string name="market_login">로그인</string>
    <string name="market_logout">로그아웃</string>
    <string name="market_sign_up">회원가입</string>
    <string name="market_add_article">등록하기</string>
    <string name="market_add_image">사진 등록하기</string>

    <string name="title_airbnb">Airbnb</string>
    <string name="airbnb_bottom_sheet_title">여러개의 숙소</string>

    <string name="title_youtube">Youtube</string>
    <string name="youtube_home">홈</string>


    <string name="title_music">Music Streaming</string>
    <string name="music_playlist">재생목록</string>

    <string name="title_location">Location Search</string>
    <string name="location_search">검색</string>
    <string name="location_search_hint">검색어를 입력해주세요</string>
    <string name="location_search_result_none">검색 결과가 없습니다.</string>

    <string name="title_ott">OTT</string>
    <string name="ott_title_watcha">WATCHA</string>
    <string name="ott_title_free">"지금 무료로\n무제한 감상 시작"</string>
    <string name="ott_login">로그인</string>
    <string name="ott_subtitle_free">영화, 드라마, 예능 등 8만 편의 작품</string>
    <string name="ott_subtitle_free_weeks">2주 무료 이용</string>
    <string name="ott_title_devices">다양한 디바이스에서\n자유롭게 감상</string>
    <string name="ott_subtitle_devices">PC, 태블릿, 펀, 크롬캐스트, TV \n어디서나 최고의 화질로</string>
    <string name="ott_title_data">5억개 평가 데이터 기반 \n정확한 추천</string>
    <string name="ott_subtitle_data">취향에 안 맞는 작품에\n두 시간을 낭비할 순 없으니까</string>


    <string name="title_git">GIT</string>
    <string name="git_login">Github Login</string>
    <string name="git_loading">로딩 중...</string>
    <string name="git_search_hint">input keyowrd</string>
    <string name="git_search_button">search</string>
    <string name="git_search_empty_result_text">No Result</string>
    <string name="git_search_empty_favorite_result">찜한 Repository 가 없습니다.</string>



    <string name="title_dust">Dust</string>
    <string name="dust_additional_information">자료 출처 : 환경부/한국환경공단\n 해당 기관이 제공하는 자료는 인증을 받지 않은 실시간 자료 이므로 자료 및 표출방식에 따라 값이 다를 수 있음 </string>
    <string name="dust_error">예기치 못한 문제가 발생했습니다. 잠시 후 다시 시도해주세요.</string>

    <string name="title_unsplash">Unsplash</string>
    <string name="unsplash_search_hint">이미지를 검색해보세요.</string>

    <string name="app_name">Module-Basic</string>




</resources>