<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical" >

         <Button
             android:id="@+id/button_bmi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/title_bmi" />

         <Button
             android:id="@+id/button_lotto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/title_lotto" />

         <Button
             android:id="@+id/button_diary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/title_diary" />
      </LinearLayout>
   </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>