<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tinder_like_text_view_my_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        tools:text="ID"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/tinder_no_card"/>

    <com.yuyakaido.android.cardstackview.CardStackView
        android:id="@+id/tinder_like_card_stack_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="15dp"
        app:layout_constraintBottom_toTopOf="@id/tinder_like_text_view_dislike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tinder_like_text_view_my_name" />

    <TextView
        android:id="@+id/tinder_like_text_view_dislike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tinder_like_button_logout"
        android:text="@string/tinder_dislike"
        android:textColor="@color/black"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tinder_like_button_logout"
        android:layout_margin="16dp"
        android:text="@string/tinder_like"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent" />



    <Button
        android:id="@+id/tinder_like_button_match_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tinder_match_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/tinder_like_button_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tinder_log_out"
        app:layout_constraintBottom_toTopOf="@id/tinder_like_button_match_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>