<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".p4_calculator.CalculatorActivity">

    <View
        android:id="@+id/calculator_top_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/calculator_bottom_table_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/calculator_text_view_expression"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="15dp"
        android:gravity="end"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1111*22" />

    <TextView
        android:id="@+id/calculator_text_view_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="end"
        android:textColor="#aaaaaa"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/calculator_bottom_table_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TableLayout
        android:id="@+id/calculator_bottom_table_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="15dp"
        android:paddingTop="21dp"
        android:paddingEnd="15dp"
        android:paddingBottom="21dp"
        android:shrinkColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculator_top_layout"
        app:layout_constraintVertical_weight="1.5">

        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="clearButtonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_clear"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:clickable="false"
                android:enabled="false"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_bracket"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_modulus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_modulus"
                android:textColor="@color/calculator_text_green"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_divide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_divide"
                android:textColor="@color/calculator_text_green"
                android:textSize="24sp" />

        </TableRow>


        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_number_7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_num_7"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_number_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_num_8"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_number_9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_num_9"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_mutiply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_multiply"
                android:textColor="@color/calculator_text_green"
                android:textSize="24sp" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_number_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_num_4"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_number_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_num_5"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_number_6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_num_6"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_minus"
                android:textColor="@color/calculator_text_green"
                android:textSize="24sp" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_number_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_num_1"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_number_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_num_2"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_number_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_num_3"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_plus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_plus"
                android:textColor="@color/calculator_text_green"
                android:textSize="24sp" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <ImageButton
                android:id="@+id/calculator_button_history"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="historyButtonClicked"
                android:src="@drawable/ic_baseline_access_time_24"
                android:stateListAnimator="@null"
                android:text="히스토리"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_number_0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_num_8"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_point"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_button"
                android:clickable="false"
                android:enabled="false"
                android:stateListAnimator="@null"
                android:text="@string/calculator_point"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculator_button_equal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@drawable/calculator_key_pad_result_button"
                android:onClick="resultButtonClicked"
                android:stateListAnimator="@null"
                android:text="@string/calculator_equal"
                android:textColor="@color/calculator_text_green"
                android:textSize="24sp" />

        </TableRow>


    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calculator_layout_history_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/calculator_bottom_table_layout"
        tools:visibility="visible">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/calculator_button_delete_history"
            app:layout_constraintTop_toBottomOf="@+id/calculator_button_close_history">

            <LinearLayout
                android:id="@+id/calculator_layout_history_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/calculator_button_close_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="historyClearButtonClicked"
            android:stateListAnimator="@null"
            android:text="@string/calculator_close_history"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/calculator_button_delete_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginEnd="47dp"
            android:layout_marginBottom="38dp"
            android:background="@color/calculator_button_green"
            android:onClick="historyDeleteButtonClicked"
            android:stateListAnimator="@null"
            android:text="@string/calculator_delete_history"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>