<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fragment_market_add_article_action_bar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fragment_market_add_article_text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/market_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:id="@+id/fragment_market_add_article_under_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_market_add_article_action_bar" />

    <EditText
        android:id="@+id/fragment_market_add_article_edit_text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="글 제목"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_market_add_article_under_line" />

    <EditText
        android:hint="가격"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_market_add_article_edit_text_title"
        android:id="@+id/fragment_market_add_article_edit_text_price"
        android:layout_width="0dp"
        android:inputType="numberDecimal"
        android:layout_margin="16dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/fragment_market_add_article_button_image_add"
        android:layout_width="0dp"
        android:text="@string/market_add_image"
        android:backgroundTint="@color/orange"
        app:layout_constraintStart_toStartOf="@id/fragment_market_add_article_image_view"
        app:layout_constraintTop_toBottomOf="@id/fragment_market_add_article_image_view"
        app:layout_constraintEnd_toEndOf="@id/fragment_market_add_article_image_view"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/fragment_market_add_article_image_view"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/fragment_market_add_article_button_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/market_add_article"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>